fix collapse bug

--- a/Portfolio/src/components/Collapse/Collapse.scss
+++ b/Portfolio/src/components/Collapse/Collapse.scss
@@ -7,18 +7,19 @@
 }
 
 .open {
+  overflow: hidden;
   max-height: 100%;
-  transition: max-height 800ms ease;
+  transition: max-height 500ms ease;
 
   .cards {
     animation: fade-in 500ms ease-in;
   }
 }
 .close {
+  overflow: hidden;
   max-height: 40px;
   transition: max-height 500ms ease;
 
-  overflow: hidden;
   .cards {
     animation: fade-out 500ms ease-in;
   }
